<resources>
    <string name="app_name">Tabletop Games</string>
    <string name="designersName">Designed by jml7540</string>
    <string name="welcome">Welcome to Tabletop Games!!!</string>
    <string name="profile_button">Manage Profile</string>
    <string name="manage_accounts_button">Manage Accounts</string>
    <string name="reservations_button">Reservations</string>
    <string name="play_game_button">Play a Game</string>
    <string name="title_activity_reservation">ReservationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date_text_view_label">Date</string>
    <string name="time_text_view_label">Time</string>
    <string name="duration_text_view_label">Duration</string>
    <string name="game_type_text_view_label">Game</string>
    <string name="table_text_view_label">Table</string>
    <string name="seat_text_view_label">Seat</string>
    <string name="email_text_view_label">Email</string>
    <string name="firstName_text_view_label">First Name</string>
    <string name="lastName_text_view_label">Last Name</string>
    <string name="password_text_view_label">Password</string>
    <string name="game_colon">Game: </string>
    <string name="table_colon">Table: </string>
    <string name="seat_colon">Seat: </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_tabletop_game">A Tabletop Game</string>
    <string name="a_table_selection">A Table Selection</string>
    <string name="table">Table</string>
    <string name="seat">Seat</string>
    <string name="duration">Duration</string>
    <string name="choose_reservation">Choose Reservation</string>
    <string name="reservation">Reservation</string>
    <string name="details_to_follow"><![CDATA[details to follow -->]]></string>
    <string name="submit_reservation">Submit Reservation</string>
    <string name="log_sheets">Log Sheets</string>
    <string name="dnd">Dungeons and Dragons</string>
    <string name="mtg">Magic the Gathering</string>
    <string name="monop">Monopoly</string>
    <string name="etal">OTHER</string>
    <string name="reservations">Reservations</string>
    <string name="home">Home</string>
    <string name="logsheets">Log Sheets</string>
    <string name="newdndentry">New DnD Entry</string>
    <string name="newmtgentry">New Magic Entry</string>
    <string name="newmonopentry">New Monopoly Entry</string>
    <string name="newlogsheet">New Log Sheet</string>
    <string name="profile">MyProfile</string>
    <string name="title_activity_reservations">Reservations</string>
    <string name="title_activity_log_sheets">Log Sheets</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_app_drawer">AppDrawer</string>
    <string name="menu">Menu</string>
    <string name="screennavigationbutton">Screen Navigation</string>
    <string name="title_activity_new_log_sheet">New Log Sheet</string>
    <string name="title_activity_new_dndentry">New Dnd Entry</string>
    <string name="title_activity_new_mtgentry">New Magic Entry</string>
    <string name="title_activity_new_monopentry">New Monopoly Entry</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="themeswitch">Theme Switch</string>
    <string name="email">Email</string>
    <string name="createprofilebutton">Create Profile</string>
    <string name="title_activity_my_profile_view">MyProfileView</string>
    <string name="title_activity_reservation_details">Reservation Details</string>
    <string name="reservationdetails">Reservation Details</string>
    <string name="newreservation">New Reservation</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="submitprofile">Submit Profile</string>
    <string name="newreservationbutton">New Reservation</string>
    <string name="editreservation">Edit Reservation</string>
    <string name="gametobeplayed">Game to be Played?</string>
    <string name="day1to10">Day? 1 – 10</string>
    <string name="month1to12">Month? 1 – 12</string>
    <string name="time1to12AMPM">Time? 10:00 AM to 9:00 PM</string>
    <string name="table1to3">Table? 1 – 3</string>
    <string name="seat1to10">Seat? 1 – 10</string>
    <string name="duration1to4">How long? 1 – 4</string>
    <string name="submitreservation">Submit Reservation</string>
    <string name="deletereservation">Delete Reservation</string>
    <string name="title_activity_dnd_log_sheet">Dnd Log Sheet</string>
    <string name="magiclogsheet">Magic the Gathering Log Sheet</string>
    <string name="monopolylogsheet">Monopoly Log Sheet</string>
    <string name="title_activity_monopoly_log_sheet">Monopoly Log Sheet</string>
    <string name="title_activity_mtg_log_sheet">Magic the Gathering Log Sheet</string>
    <string name="editlogsheet">Edit Log Sheet</string>
    <string name="editdndentry">Edit Dnd Entry</string>
    <string name="editmtgentry">Edit Mtg Entry</string>
    <string name="editmonopentry">Edit Monopoly Entry</string>
    <string name="editdndlogsheet">Edit Dnd Log Sheet</string>
    <string name="editmtglogsheeet">Edit Mtg Log Sheet Screen</string>
    <string name="title_activity_edit_mtg_log_sheet">EditMtgLogSheet</string>
    <string name="editmonoplogsheet">Edit Monopoly Log Sheet</string>
    <string name="title_activity_edit_monop_log_sheet">Edit Monopoly Log Sheet</string>
    <string name="newlogsheetbutton">New Log Sheet</string>
    <string name="playerdcinumber">Player DCI Number</string>
    <string name="charactername">Character Name</string>
    <string name="classes">Classes</string>
    <string name="faction">Faction</string>
    <string name="souldcoinscarried">Soul Coins Carried</string>
    <string name="souldcoinchargesused">Soul Coin Charges Used</string>
    <string name="logsheetentries">Log Sheet Entries</string>
    <string name="newentrybutton">New Entry</string>
    <string name="characterrace">Character Race</string>
    <string name="deletelogsheetbutton">Delete Log Sheet</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="d_n_d">DND+</string>
    <string name="m_t_g">MTG+</string>
    <string name="monopolybutton">Monopoly+</string>
    <string name="soulcoinscarried">Soul Coins Carried</string>
    <string name="soulcoinchargesused">Soul Coin Charges Used</string>
    <string name="submitbutton">Submit</string>
    <string name="title_activity_dnd_entry">DndEntry</string>
    <string name="dndentry">Dnd Entry</string>
    <string name="adventurename">Adventure Name</string>
    <string name="adventurecode">Adventure Code</string>
    <string name="daymonthyear">Day Month Year</string>
    <string name="dmdcinumber">DM DCI Number</string>
    <string name="levelaccepted">Level Accepted</string>
    <string name="goldplusminus">Gold Plus Minus</string>
    <string name="downtimeplusminus">Downtime Plus Minus</string>
    <string name="permanentmagicitemsplusminus">Permanent Magic Items Plus Minus</string>
    <string name="newclass">New Class</string>
    <string name="adventurenotes">Adventure Notes</string>
    <string name="startinglevel">Starting Level</string>
    <string name="startinggold">Starting Gold</string>
    <string name="startingdowntime">Starting Downtime</string>
    <string name="startingmagicitems">Starting Magic Items</string>
    <string name="editbutton">Edit</string>
    <string name="goldtotal">Total Gold</string>
    <string name="downtimetotal">Total Downtime</string>
    <string name="permanentmagicitemstotal">Total Permanent Magic Items</string>
    <string name="soulcoinchargesusedtotal">Total Soul Coin Charges Used</string>
    <string name="gametype">Game Type</string>
    <string name="datecreated">Date Created</string>
    <string name="players">Players</string>
    <string name="winner">Winner</string>
    <string name="winners">Winners</string>
    <string name="games">Games</string>
    <string name="title_activity_mtg_entry">MtgEntry</string>
    <string name="mtgentry">Magic the Gathering Entry</string>
    <string name="mtgentrywinnertext"> won game number </string>
    <string name="day1to31">Day? 1 to 31</string>
    <string name="startingclass">Starting Class</string>
    <string name="addplayerbutton">Add Player</string>
    <string name="addnewplayers">Add New Player(s)</string>
    <string name="invalidlogin">Invalid Email or Password. Please try again.</string>
    <string name="fail2registeruser">Could not register user. Please try again.</string>
    <string name="loginsuccess">Successfully registered this user.</string>
    <string name="invalidsubmission">You have made an invalid submission. Please try again.</string>
    <string name="warning">Warning!!!</string>
    <string name="acknowledged">Acknowledged</string>
    <string name="notconnected">The app is not connected to the server!</string>
    <string name="realmerror">Error in realm</string>
    <string name="emailexists">This login profile exists. Please try again.</string>
    <string name="none">none</string>
    <string name="emptyfields">Please fill out all fields. Thank you.</string>
    <string name="noblankfields">The fields cannot be blank. Please fill out all fields.</string>
    <string name="loginnotfound">Login not found.</string>
    <string name="errorhasoccurred">An error has occurred.</string>
    <string name="reservationexists">This reservations exists. Please try again.</string>
    <string name="comingsoon">This feature is coming soon!</string>
    <string name="logout">Logout</string>
    <string name="phone_text_view_label">Phone</string>
    <string name="dndormtg">Dungeons and Dragons  or Magic the Gathering?</string>
</resources>