<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".NewReservationActivity">

    <Spinner
        android:id="@+id/table_selection_drop_down_list"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/a_table_selection"
        app:layout_constraintStart_toEndOf="@+id/table_selection_textView"
        app:layout_constraintTop_toBottomOf="@+id/game_type_selection_drop_down_list" />

    <TextView
        android:id="@+id/duration_selection_textView"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/duration"
        android:textColor="@color/blue_faded"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/duration_selection_drop_down_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_selection_textView" />

    <TextView
        android:id="@+id/seat_selection_textView"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/seat"
        android:textColor="@color/blue_faded"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/duration_selection_drop_down_list"
        app:layout_constraintTop_toBottomOf="@+id/game_type_selection_drop_down_list" />

    <TextView
        android:id="@+id/game_type_textView"
        android:layout_width="79dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:background="@color/colorAccent"
        android:contentDescription="@string/a_tabletop_game"
        android:gravity="center"
        android:text="@string/game_type_text_view_label"
        android:textColor="@color/comicred"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/game_type_selection_drop_down_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/game_type_selection_drop_down_list"
        android:layout_width="245dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:contentDescription="@string/a_table_selection"
        android:dropDownWidth="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/game_type_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/table_selection_textView"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:gravity="center"
        android:text="@string/table"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_type_textView" />

    <Spinner
        android:id="@+id/duration_selection_drop_down_list"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@+id/duration_selection_textView"
        app:layout_constraintTop_toBottomOf="@+id/table_selection_drop_down_list" />

    <Spinner
        android:id="@+id/seat_selection_drop_down_list"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seat_selection_textView"
        app:layout_constraintTop_toBottomOf="@+id/game_type_selection_drop_down_list" />

    <Button
        android:id="@+id/choose_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/choose_reservation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seat_selection_textView" />

    <TextView
        android:id="@+id/reservation_label_textView"
        android:layout_width="130dp"
        android:layout_height="29dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:text="@string/reservation"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/details_of_reservation_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duration_selection_textView" />

    <TextView
        android:id="@+id/details_of_reservation_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:minWidth="250dp"
        android:minHeight="150dp"
        android:text="@string/details_to_follow"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_reservation_button" />

    <Button
        android:id="@+id/submit_new_reservation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginLeft="106dp"
        android:layout_marginEnd="106dp"
        android:layout_marginRight="106dp"
        android:layout_marginBottom="198dp"
        android:text="@string/submit_reservation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>