<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dnd"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/reservation_book"
        android:layout_width="211dp"
        android:layout_height="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/reservationbook" />

    <Button
        android:id="@+id/reservations_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="reservations"
        android:text="@string/reservations_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_book" />

    <ImageView
        android:id="@+id/playbutton"
        android:layout_width="187dp"
        android:layout_height="172dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/playbutton" />

    <Button
        android:id="@+id/playagame_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="8dp"
        android:onClick="alert"
        android:text="@string/play_game_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playbutton" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="205dp"
        android:layout_height="200dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservations_button"
        app:srcCompat="@drawable/profile" />

    <Button
        android:id="@+id/profile_button"
        android:layout_width="146dp"
        android:layout_height="62dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:onClick="alert"
        android:text="@string/profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile" />

    <Button
        android:id="@+id/manage_accounts_button"
        android:layout_width="165dp"
        android:layout_height="56dp"
        android:layout_marginLeft="7dp"
        android:onClick="alert"
        android:text="@string/manage_accounts_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/profile"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playagame_button"
        app:layout_constraintVertical_bias="0.186" />
</androidx.constraintlayout.widget.ConstraintLayout>